feat: update config

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.74",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.12",
     "node-sass": "^7.0.3",
     "sass-loader": "^14.1.1"
   }
